--- a/templates/sanity.html
+++ b/templates/sanity.html
@@ -8,8 +8,31 @@
     {% include 'navbar.html' %}
     <div class="panel panel-default">
         <div class="panel-body">
+            {% if triaging_by_user %}
+                <h3><span class="">Number of issues being triaged by user</span></h3>
+                <div class="table-responsive">
+                  <table class="table table-striped table-sm">
+                    <thead>
+                      <tr>
+                        <th>Username</th>
+                        <th># triaging</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for user, number in triaging_by_user.items() %}
+                      <tr>
+                          <td><a href="https://github.com/conan-io/conan/issues?q=is%3Aopen+is%3Aissue+assignee%3A{{ user.login }}+label%3A%22stage%3A+triaging%22">{{ user.login }}</a></td>
+                          <td>{{ number }}</td>
+                      </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
+            {% else %}
+                <h3><span class="">No issues being triaged... weird</span></h3>
+            {% endif %}
             {% if triaging_without_user %}
-                <h3><span class="">"stage:triaging" without user</span></h3>
+                <h3><span class="">Check "stage:triaging" without user</span></h3>
                 <div class="table-responsive">
                   <table class="table table-striped table-sm">
                     <thead>
@@ -29,9 +52,8 @@
                   </table>
                 </div>
             {% else %}
-                <h3><span class="">"stage:triaging" OK!</span></h3>
+                <h3><span class=""><span class="glyphicon glyphicon-ok"></span> no triaging user without owner</span></h3>
             {% endif %}
-
             {% if queue_with_user %}
                 <h3><span class="">"stage:queue" with user</span></h3>
                 <div class="table-responsive">
@@ -55,7 +77,7 @@
                   </table>
                 </div>
             {% else %}
-                <h3><span class="">"stage:queue" OK!</span></h3>
+                <h3><span class=""><span class="glyphicon glyphicon-ok"></span> no enqueued issues with owner</span></h3>
             {% endif %}
         </div>
     </div>
