--- a/templates/sanity.html
+++ b/templates/sanity.html
@@ -32,7 +32,7 @@
                 <h3><span class="">No issues being triaged... weird</span></h3>
             {% endif %}
             {% if triaging_without_user %}
-                <h3><span class="">Check "stage:triaging" without user</span></h3>
+                <h3><span class=""><span class="glyphicon glyphicon-remove"></span> Checking "stage:triaging" without user</span></h3>
                 <div class="table-responsive">
                   <table class="table table-striped table-sm">
                     <thead>
@@ -55,7 +55,7 @@
                 <h3><span class=""><span class="glyphicon glyphicon-ok"></span> no triaging user without owner</span></h3>
             {% endif %}
             {% if queue_with_user %}
-                <h3><span class="">"stage:queue" with user</span></h3>
+                <h3><span class=""><span class="glyphicon glyphicon-remove"></span> Checking "stage:queue" with user</span></h3>
                 <div class="table-responsive">
                   <table class="table table-striped table-sm">
                     <thead>
